adds webpack to client-project

--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -1,6 +1,15 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "module": "esnext",
     "target": "es5",
+    "jsx": "react",
+    "preserveConstEnums": true,
+    "removeComments": true,
+    "suppressImplicitAnyIndexErrors": true,
     "lib": [
       "dom",
       "dom.iterable",
@@ -9,18 +18,14 @@
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react",
-    "experimentalDecorators": true
+    "noEmit": true
   },
   "include": [
-    "src"
+    "src/index.tsx"
   ]
 }
