--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -23,6 +23,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noEmit": true
   },
   "include": [
     "src/index.tsx"
