--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack",
+    "build": "webpack --production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
