--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -23,7 +23,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": false
   },
   "include": [
     "src/index.tsx"
