--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -22,8 +22,7 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": false
+    "isolatedModules": true
   },
   "include": [
     "src/index.tsx"
