--- a/client-app/package.json
+++ b/client-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
+    "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "axios": "^0.19.0",
@@ -12,6 +13,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
@@ -58,6 +60,7 @@
     "ts-pnp": "1.1.4",
     "typescript": "^3.6.4",
     "url-loader": "2.1.0",
+    "uuid": "^3.3.3",
     "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
@@ -65,7 +68,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "webpack -development",
+    "build": "webpack",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -150,11 +153,6 @@
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
     ]
   }
 }
