--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
     "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
@@ -17,7 +16,6 @@
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.1.0",
@@ -28,16 +26,16 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "3.0.1",
+    "fibers": "^4.0.2",
     "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
-    "mini-css-extract-plugin": "0.8.0",
+    "mobx": "^5.15.0",
+    "mobx-react-lite": "^1.5.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -51,17 +49,15 @@
     "react-dom": "^16.10.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
+    "sass": "^1.23.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "semver": "6.3.0",
-    "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "typescript": "^3.6.4",
     "url-loader": "2.1.0",
     "uuid": "^3.3.3",
-    "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
     "workbox-webpack-plugin": "4.3.1"
@@ -97,7 +93,7 @@
     "@types/react-dom": "^16.9.1",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "4.0.0-beta.5",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
