--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -22,7 +22,8 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "experimentalDecorators": true
   },
   "include": [
     "src/index.tsx"
