--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,7 +6,6 @@
     "@svgr/webpack": "4.3.2",
     "@types/uuid": "^3.4.6",
     "axios": "^0.19.0",
-    "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
@@ -16,9 +15,8 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "3.13.0",
+    "eslint": "^6.6.0",
+    "eslint-loader": "^3.0.2",
     "fibers": "^4.0.2",
     "fs-extra": "7.0.1",
     "identity-obj-proxy": "3.0.0",
@@ -58,11 +56,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "webpack",
-    "test": "node scripts/test.js",
-    "pretest": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore . --ignore-pattern node_modules/ --fix"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "test": "node scripts/test.js"
   },
   "browserslist": {
     "production": [
@@ -85,15 +79,7 @@
     "@babel/preset-react": "^7.6.3",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
     "css-loader": "^3.2.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "mini-css-extract-plugin": "^0.8.0",
