--- a/client-app/package.json
+++ b/client-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@svgr/webpack": "4.3.2",
+    "@types/react-router-dom": "^5.1.2",
     "@types/uuid": "^3.4.6",
     "axios": "^0.19.0",
     "babel-jest": "^24.9.0",
@@ -38,6 +39,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass": "^1.23.3",
