--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,6 +19,7 @@
     "eslint-loader": "^3.0.2",
     "fibers": "^4.0.2",
     "fs-extra": "7.0.1",
+    "history": "^4.10.1",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "24.9.0",
@@ -40,6 +41,7 @@
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.4.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass": "^1.23.3",
