--- a/client-app/.eslintrc.json
+++ b/client-app/.eslintrc.json
@@ -29,6 +29,7 @@
         "react/prop-types": 0,
         "no-unused-vars": 0,
         "no-console": "off",
+        "react/jsx-props-no-spreading": "off",
         "no-restricted-syntax": [
             "error",
             {
