--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,6 +18,7 @@
     "dotenv-expand": "5.1.0",
     "eslint-loader": "^3.0.2",
     "fibers": "^4.0.2",
+    "final-form": "^4.18.6",
     "fs-extra": "7.0.1",
     "history": "^4.10.1",
     "identity-obj-proxy": "3.0.0",
@@ -39,6 +40,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
+    "react-final-form": "^6.3.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-toastify": "^5.4.1",
