Adds new date input component for form

--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -26,6 +26,7 @@
     "experimentalDecorators": true
   },
   "include": [
-    "src/index.tsx"
+    "src/index.tsx",
+    "typings-custom/**/*.ts"
   ]
 }
