--- a/client-app/package.json
+++ b/client-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@svgr/webpack": "4.3.2",
     "@types/react-router-dom": "^5.1.2",
+    "@types/react-widgets": "^4.4.2",
     "@types/uuid": "^3.4.6",
     "axios": "^0.19.0",
     "babel-jest": "^24.9.0",
@@ -14,6 +15,7 @@
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "date-fns": "^2.0.0-alpha.7",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
     "eslint-loader": "^3.0.2",
@@ -44,6 +46,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-toastify": "^5.4.1",
+    "react-widgets": "^4.5.0",
+    "react-widgets-date-fns": "^4.1.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass": "^1.23.3",
@@ -89,7 +93,7 @@
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "css-loader": "^3.2.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
