--- a/client-app/package.json
+++ b/client-app/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "dependencies": {
     "@svgr/webpack": "4.3.2",
-    "@types/react-router-dom": "^5.1.2",
+    "@types/react-router-dom": "^5.1.4",
     "@types/react-widgets": "^4.4.2",
-    "@types/uuid": "^3.4.6",
-    "axios": "^0.19.0",
+    "@types/revalidate": "^1.1.2",
+    "@types/uuid": "^3.4.8",
+    "axios": "^0.19.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
+    "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^9.0.2",
+    "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "date-fns": "^2.0.0-alpha.7",
+    "date-fns": "^2.12.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint-loader": "^3.0.2",
+    "eslint-loader": "^3.0.4",
     "fibers": "^4.0.2",
-    "final-form": "^4.18.6",
+    "final-form": "^4.19.1",
     "fs-extra": "7.0.1",
     "history": "^4.10.1",
     "identity-obj-proxy": "3.0.0",
@@ -29,8 +30,8 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
-    "mobx": "^5.15.0",
-    "mobx-react-lite": "^1.5.1",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^1.5.2",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -38,27 +39,28 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.10.2",
-    "react-app-polyfill": "^1.0.4",
+    "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^9.1.0",
-    "react-dom": "^16.10.2",
-    "react-final-form": "^6.3.3",
+    "react-dom": "^16.13.1",
+    "react-final-form": "^6.4.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-toastify": "^5.4.1",
+    "react-toastify": "^5.5.0",
     "react-widgets": "^4.5.0",
     "react-widgets-date-fns": "^4.1.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
-    "sass": "^1.23.3",
+    "revalidate": "^1.2.0",
+    "sass": "^1.26.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1",
+    "semantic-ui-react": "^0.88.2",
     "semver": "6.3.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
-    "typescript": "^3.6.4",
+    "typescript": "^3.8.3",
     "url-loader": "2.1.0",
-    "uuid": "^3.3.3",
+    "uuid": "^3.4.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
     "workbox-webpack-plugin": "4.3.1"
@@ -83,32 +85,32 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "css-loader": "^3.2.0",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "file-loader": "^4.2.0",
+    "file-loader": "^4.3.0",
     "html-webpack-plugin": "4.0.0-beta.5",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^1.0.0",
-    "ts-loader": "^6.2.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "style-loader": "^1.1.4",
+    "ts-loader": "^6.2.2",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "jest": {
     "roots": [
