Adds endpoint to controller for photos Fixes settings for cloudinary

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     },
     "API": {
       "commandName": "Project",
+      "commandLineArgs": "watch run",
       "launchBrowser": true,
       "launchUrl": "swagger/index.html",
       "environmentVariables": {
